Small delete point marker overlap style fix

--- a/public/editor/css/marker-style.css
+++ b/public/editor/css/marker-style.css
@@ -31,6 +31,7 @@
 
     background-color: white;
     padding: 10px;
+    padding-right: 30px;
 
     box-shadow:0 0 20px rgba(0, 0, 0, 0.19);
 
